c_header_DATA = \
	pi-address.h		\
	pi-appinfo.h		\
	pi-args.h		\
	pi-cmp.h		\
	pi-datebook.h		\
	pi-debug.h		\
	pi-dlp.h		\
	pi-expense.h		\
	pi-file.h		\
	pi-header.h		\
	pi-hinote.h		\
	pi-iambicExpense.h	\
	pi-inet.h		\
	pi-macros.h		\
	pi-mail.h		\
	pi-md5.h		\
	pi-memo.h		\
	pi-money.h		\
	pi-net.h		\
	pi-padp.h		\
	pi-serial.h		\
	pi-slp.h		\
	pi-sockaddr-win32.h	\
	pi-sockaddr.h		\
	pi-socket.h		\
	pi-source.h		\
	pi-sync.h		\
	pi-syspkt.h		\
	pi-todo.h		\
	pi-util.h		\
	pi-version.h		\
	pi-version.h.in

c_headerdir=$(includedir)

cxx_header_DATA = \
	pi-address.hxx		\
	pi-appinfo.hxx		\
	pi-datebook.hxx		\
	pi-dlp.hxx		\
	pi-iambicExpense.hxx	\
	pi-memo.hxx		\
	pi-todo.hxx

cxx_headerdir=$(includedir)

EXTRA_DIST = \
	$(c_header_DATA)	\
	$(cxx_header_DATA)
